# turing

./: .autotools  .cproject  .gitmodules  .project  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
mtl/boost/numeric/linear_algebra/: linear_operator.hpp
mtl/boost/numeric/mtl/: mtl_fwd.hpp
mtl/boost/numeric/mtl/concept/: collection.hpp
mtl/boost/numeric/mtl/detail/: dilated_int.hpp
mtl/boost/numeric/mtl/interface/: umfpack_solve.hpp
mtl/boost/numeric/mtl/matrix/: banded_view.hpp  dense2D.hpp  map_view.hpp  transposed_view.hpp
mtl/boost/numeric/mtl/operation/: imag.hpp  real.hpp  split_complex_vector.hpp
mtl/boost/numeric/mtl/utility/: ashape.hpp
mtl/boost/numeric/mtl/vector/: dense_vector.hpp  map_view.hpp  reduction_functors.hpp  sparse_vector.hpp
src/: Controller.h  EvolutionController.cpp  EvolutionController.h  Filename.h  OStreamCollection.h  ScanController.cpp  ScanController.h  TuringApp.cpp  TuringApp.h  TuringOptions.cpp  TuringOptions.h  mimura.h  turing.cpp  ublas_bindings.h
src/loggers/: AverageEvolutionLogger.h  AveragesLogger.h  Logger.h  Loggers.h  PatternLogger.cpp  PatternLogger.h  ScanLogger.h  SnapshotLogger.cpp  SnapshotLogger.h
src/model/: AverageEdgeWeight.cpp  AverageNodeStrength.cpp  ConcentrationDifference.cpp  ConcentrationDifference.h  DiffusionMatrix.cpp  DiffusionMatrix.h  EdgeWeights.h  GraphStateReader.cpp  GraphStateReader.h  GraphStateWriter.cpp  GraphStateWriter.h  OrderParameter.h  TuringModel.cpp  TuringModel.h  types.h
src/model/measures/: AverageConcentrations.h  AverageEdgeWeight.cpp  AverageEdgeWeight.h  AverageNodeStrength.cpp  AverageNodeStrength.h  ConcentrationDifference.cpp  ConcentrationDifference.h  PatternAmplitude.h
src/ode/: Integrator.h  ODE.h  RK4Stepper.cpp  RK4Stepper.h  Stepper.h  ode_traits.h
